creusot/tests/should_fail/prusti/snap_eq/neq.stderr
error[creusot]: binary operation `==` cannot be applied to type `creusot_contracts::prusti_prelude::Zombie<std::boxed::Box<u32>>` since it doesn't implement `SnapEq`
 --> neq.rs:4:11
  |
4 | #[ensures((b, 0).0 != result ==> false)]
  |           ^^^^^^^^

error: aborting due to previous error

